--- a/M6_FormatsEchanges/FormatsEchanges_Console/FormatsEchanges_Console.csproj
+++ b/M6_FormatsEchanges/FormatsEchanges_Console/FormatsEchanges_Console.csproj
@@ -2,18 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="10.1.1" />
-    <PackageReference Include="Moq" Version="4.16.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Unity" Version="5.11.10" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\M6_FormatsEchanges2\FormatsEchanges_LibrairieClasses.csproj" />
+    <ProjectReference Include="..\FormatsEchanges_LibrairieClasses\FormatsEchanges_LibrairieClasses.csproj" />
   </ItemGroup>
 
 </Project>
