Toutes les fonctionnalités sont codé et fonctionnelles

--- a/M9_GestionClient/WinFormsGestionClient/appsettings.json
+++ b/M9_GestionClient/WinFormsGestionClient/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "RepertoireDepotsClients": "c:\\tmp",
+  "RepertoireDepotsClients": "C:\\info\\S3\\Poo2\\CSFOY__S3_ProgrammationObject2\\M9_GestionClient\\WinFormsGestionClient\\bin\\Debug\\net5.0-windows\\",
   "NomFichierDepotClients": "clients.json",
   "TypeDepot": "JSON"
 }
