--- a/M10_CaisseEnregistreuse/WinFormsApp1/WinFormsApp1.csproj
+++ b/M10_CaisseEnregistreuse/WinFormsApp1/WinFormsApp1.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibrairieClasses\LibrairieClasses.csproj" />
+  </ItemGroup>
+
 </Project>
