--- a/M11_DessinLigne/ApplicationGraphique_Winform/ApplicationGraphique_Winform.csproj
+++ b/M11_DessinLigne/ApplicationGraphique_Winform/ApplicationGraphique_Winform.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibrairieClasses\LibrairieClasses.csproj" />
+  </ItemGroup>
+
 </Project>
