Tout est fonctionnel, sauf pour le func qui est à revoir

--- a/M12_TraitementImage/TraitementImage_UI/TraitementImage_UI.csproj
+++ b/M12_TraitementImage/TraitementImage_UI/TraitementImage_UI.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TraitementImage_LibrairieClasse\TraitementImage_LibrairieClasse.csproj" />
+  </ItemGroup>
+
 </Project>
